# agent-scope

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  NANOBOT_SETUP.md  README.md  README_CN.md  STARTUP_GUIDE.md  TOKEN_PRICING.md  demo_v2.py  docker-compose.yml  experience_guide.md  install.sh  start_experience.sh  test_api_integration.py  test_backend_v2_complete.py  test_e2e.py  test_edge_cases.py  test_integration.py  test_performance.py  test_scheme3.py
.github/workflows/: ci.yml  release.yml
agentscope/instrumentation/: __init__.py  nanobot_instrumentor.py
backend/: Dockerfile  main.py  main_v2.py  main_v2_old.py  requirements.txt  storage_manager.py
backend/tests/: test_placeholder.py
docs/: FRAMEWORK_INTEGRATION_GUIDE.md  NANOBOT_INTEGRATION_GUIDE.md  architecture.md  integration-guide.md  monitoring-coverage.md
examples/: enhanced_monitoring_demo.py  migrate_to_non_intrusive.sh  nanobot_wrapper.py  rollback_nanobot_changes.py  sitecustomize.py  start_nanobot_with_monitoring.py
frontend/: Dockerfile  package-lock.json  package.json
gan-harness/: FINAL_REPORT.md
scripts/: restart-nanobot.sh  start-nanobot.sh  status-nanobot.sh  stop-nanobot.sh
sdk/: README.md  pyproject.toml  setup.py
sdk/agentscope/: __init__.py  models.py  monitor.py  pricing.py
sdk/agentscope/cli/: __init__.py  __main__.py  commands.py  main.py
sdk/agentscope/instrumentation/: nanobot_instrumentor.py
sdk/agentscope/storage/: __init__.py  base.py  memory.py  sqlite.py
sdk/tests/: __init__.py  test_basic.py  test_models.py  test_monitor.py.bak
(+40 files in other folders)
